style.css
body {
  background: rgb(204, 204, 153);
  color: black;
}
#frame {
  background: white;
  color: black;
  width: 802px; margin: 0 auto;
  font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
}

#content { padding: 10px 50px; }

ul.header {
  overflow: auto;
  margin: 0;
  padding: 0;
}
.header li {
  list-style-type: none;
  display: block;
}
.header a {
  float: left;
  width: 93px;
  height: 26px;
  text-indent: 100%;
  white-space: nowrap;
  overflow: hidden;
}

.header a:hover {
  background-position: 0 26px;
}

#link-home { width: 93px; background-image: url(Basic%20Layout/NavTop/images/navtop_1.png); }
#link-aikido { width: 102px; background-image: url(Basic%20Layout/NavTop/images/navtop_2.png);}
#link-about { width: 122px; background-image: url(Basic%20Layout/NavTop/images/navtop_3.png);}
#link-instructors { width: 143px; background-image: url(Basic%20Layout/NavTop/images/navtop_4.png);}
#link-officers { width: 114px; background-image: url(Basic%20Layout/NavTop/images/navtop_5.png);}
#link-sched { width: 127px; background-image: url(Basic%20Layout/NavTop/images/navtop_6.png);}
#link-events { width: 101px; background-image: url(Basic%20Layout/NavTop/images/navtop_7.png);}

#link-photos { width: 102px; background-image: url(Basic%20Layout/NavBottom/images/navbottom_1.png);}
#link-glossary { width: 111px; background-image: url(Basic%20Layout/NavBottom/images/navbottom_2.png);}
#link-library { width: 92px; background-image: url(Basic%20Layout/NavBottom/images/navbottom_3.png);}
#link-kyu { width: 169px; background-image: url(Basic%20Layout/NavBottom/images/navbottom_4.png);}
#link-nafudakake { width: 135px; background-image: url(Basic%20Layout/NavBottom/images/navbottom_5.png);}
#link-links { width: 83px; background-image: url(Basic%20Layout/NavBottom/images/navbottom_6.png);}
#link-contact { width: 110px; background-image: url(Basic%20Layout/NavBottom/images/navbottom_7.png);}

#footer { font-size: 10px; text-align: center; }
dt { font-weight: bold; }
dd { margin-bottom: 1em; }

